<resources>
    <string name="app_name">Ecommerce App - MyTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_add_to_cart">Add To Cart</string>
    <string name="text_go_to_cart">Go To Cart</string>
    <string name="stock_quantity">Stock Quantity</string>
    <string name="rating">Rating</string>
    <string name="text_empty_cart">Empty Cart</string>
    <string name="product_price">Product price</string>
    <string name="shipping_price">Shipping price</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="price">Price</string>
    <string name="select_option">Select Option</string>
    <string name="details">Details</string>
    <string name="category">Category</string>
</resources>