<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:isScrollContainer="true"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.ProductDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/productImg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitXY"
            android:background="@color/white"
            app:srcCompat="@drawable/product_placeholder_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="Poster of Homer" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tk 200"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="Category"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/productDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="Details"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_quantity"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/productStockQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="2dp"
                android:includeFontPadding="false"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="observableProductStockQuantity"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <RatingBar
                android:id="@+id/productRatingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"

                android:max="5"
                android:layout_gravity="center_vertical"
                android:numStars="5"
                android:rating="2.0"
                android:stepSize="0.5" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/text_add_to_cart"
            android:textAllCaps="false"
            android:backgroundTint="@color/skyblue"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/text_go_to_cart"
            android:textAllCaps="false"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>